--- a/core/templates/core/chats.html
+++ b/core/templates/core/chats.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="mx-auto px-6 max-w-7xl my-10">
-  <h1 class="text-3xl mb-4">Minhas conversas</h1>
+  <h1 id="tela_conversas" class="text-3xl mb-4">Minhas conversas</h1>
   <div class="grid grid-cols-3 gap-5 mt-6">
     {% for chat in chats %}
       <div class="bg-slate-600 rounded-xl">
@@ -14,9 +14,9 @@
               <img src="{{ chat.car.image.url }}" class="rounded-t-xl h-[150px]">
             </div>
 
-            <div class="p-4 bg-white rounded-b-xl" id="oi"> 
+            <div class="p-4 bg-white rounded-b-xl" > 
               <h2 class="text-2xl mb-3">{{ chat.car.name }}</h2>
-              <p >
+              <p id="oi">
                 {% if request.user == chat.buyer %}
                   Vendedor: {{ chat.seller.username }}
                 {% else %}
