--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,7 +16,7 @@
       <div>
         {% if request.user.is_authenticated %}
           <a id="filtros" href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Carros</a>
-          <a id="minhas-conversas" href="/chats" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Minhas conversas</a>
+          <a id="minhas_conversas" href="/chats" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Minhas conversas</a>
         {% else %}
           <a id="filtros" href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Carros</a>
         {% endif %}
